# foundry-agents-mcp-server

./: .env.sample  .gitignore  Dockerfile  README.md  azure.yaml  entrypoint.sh  pyproject.toml
azd-hooks/: deploy.sh
demo_client/: README.md  __main__.py  main.py
infra/: main.bicep  main.parameters.json  write_env.sh
infra/ai/: foundry.bicep  search.bicep
infra/app/: server.bicep
infra/core/host/: container-app-upsert.bicep  container-app.bicep  container-apps-environment.bicep  container-apps.bicep  container-registry.bicep  vnet.bicep
infra/core/security/: foundry-access.bicep  registry-access.bicep  role.bicep  search-access.bicep
src/foundry_agents/: __init__.py  _client.py  _foundry.py  _html.py  _ingest.py  architecture_agent.py  case_study_agent.py  project_log_workflow.py
src/foundry_agents/definitions/: architecture_agent.yaml  case_study_agent.yaml  project_log_workflow.yaml
src/foundry_agents_mcp/: __init__.py  __main__.py  agents.py  app.py  client.py  index.py  search.py  server.py  workflows.py
src/foundry_agents_mcp/agents/: architecture_agent.yaml  case_study_agent.yaml
src/foundry_agents_mcp/workflows/: project_log_workflow.yaml
